trunk - unreleased
==================

1.6.0 - 2007-08-16
==================

1.6.0-rc2 - 2007-07-27
======================

  * Updated componentregisty.xml to new style.
    [hannosch]

1.6.0-rc1 - 2007-07-04
======================

  * Do not modify the portal_skins tool configuration
    [wichert]

1.6.0-b5 - 2007-05-05
=====================

  * Fix signature of fixUpSMIGlobs.
    [wichert]

1.6.0-b4 - 2007-04-28
=====================

  * Go back to using getToolByName for CMF tools.
    [nouri]

1.6.0-b3 - 2007-03-20
=====================

  * Removed tests/runalltests.py and tests/framework.py as they have
    outlived their usefulness. To run tests use Zope's testrunner:
    ./bin/zopectl test --nowarn -s Products.MimetypesRegistry
    [stefan]

1.6.0-b2 - 2007-03-05
=====================

  * Use new cmf:registerDirectory zcml directive and removed corresponding code
    from the initialize method.
    [hannosch]

1.6.0-b1 - 2007-02-27
=====================

  * version bumped to 1.6, 1.5 is now for archetypes 1.4 bugfixing
    whatever happens with 1.6.x shouldt have effects on AT 1.4
    [jensens]

1.5.0-a1 - 2007-02-06
=====================

  * Implemented PLIP 149
    [tomster]

1.4.1-final - 2006-09-15
========================

  * Converted usage of zLOG to new Python logging module.
    [hannosch]

  * Mime type links are now urllib quoted.  This fixes #682 
    (http://dev.plone.org/archetypes/ticket/682).
    [rocky]

1.4.0-final - 2006-06-16
========================

  * Use zope.contenttype in favor of zope.app.content_types if available.
    [hannosch]

1.4.0-beta2 - 2006-05-12
========================

  * Use zope.app.content_types in favor of OFS.content_types if available.
    [stefan]

  * Spring-cleaning of tests infrastructure.
    [hannosch]

1.4.0-beta1 - 2006-03-26
========================

  * fixed Plone #5027: MimeTypeRegistry.classify doesn't handle 
    "no mimetype" gracefully. Returns 'None' now.
    [jensens]
